--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <a href="/demo">Website Demo</a>
+        <a id="demobutton" href="/demo">Website Demo</a>
       </section>
     </div>
 
