--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/jp2masa/urf">View on GitHub</a>
 
-          <h1 id="project_title">URF Games Search</h1>
+          <h1 id="project_title">U.R.F. Matches Search</h1>
           <h2 id="project_tagline"></h2>
         </header>
     </div>
